@@ -91,6 +91,9 @@ Avro 1.5.0 (unreleased)
     AVRO-750. C: Install a pkg-config file
     (dcreager)
 
+    AVRO-730. Java: Add set() and remove() methods to GenericData.Array.
+    (Chase Bradford via cutting)
+
   IMPROVEMENTS
 
     AVRO-765. Java: Improvement to BinaryDecoder readLong performance
